# agentusage

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  RELEASING.md  USAGE.md
src/: config.rs  main.rs  server.rs  view.rs
src/core/: mod.rs
src/providers/: codex.rs  copilot.rs  local.rs  mod.rs  pi.rs
src/storage/: mod.rs  postgres.rs  schema.rs  sqlite.rs
src/telemetry/: mod.rs
src/tui/: mod.rs
