[package]
name = "agentusage"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
description = "Local-first agent usage tracking"
license = "MIT"
repository = "https://github.com/binzhango/agentusage"
readme = "README.md"

[[bin]]
name = "agentusage"
path = "src/main.rs"

[[bin]]
name = "au"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde", "clock"] }
crossterm = "0.29.0"
clap = { version = "4.6.2", features = ["derive"] }
hex = "0.4.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
postgres = { version = "0.19.14", features = ["with-chrono-0_4", "with-serde_json-1"] }
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tiny_http = "0.12.0"
uuid = { version = "1.24.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
