[package]
name = "agentusage"
version = "0.1.7"
edition = "2024"
rust-version = "1.85"
description = "Local-first agent usage tracking"
license = "MIT"
repository = "https://github.com/binzhango/agentusage"
readme = "README.md"

[[bin]]
name = "agentusage"
path = "src/main.rs"

[[bin]]
name = "au"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
